<resources>
    <string name="app_name">Asclepius</string>
    <string name="gallery">Gallery</string>
    <string name="history">History</string>
    <string name="label">Cancer</string>
    <string name="articles">Articles</string>
    <string name="replace_image">Replace Image</string>
    <string name="analyze">Analyze</string>
    <string name="result">Analysis Result</string>
    <string name="classifier_failed">Image classifier failed to initialize</string>
    <string name="newstitles">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</string>
    <string name="newsdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
</resources>