<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_margin="12dp"
    android:layout_marginVertical="16dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@drawable/button_outline"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/news_image"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/articles"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:lines="2"
            android:paddingHorizontal="10dp"
            android:text="@string/newstitles"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/news_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/newsDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:lines="3"
            android:paddingHorizontal="10dp"
            android:text="@string/newsdescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/newsTitle"
            app:layout_constraintHorizontal_bias="0.962"
            app:layout_constraintStart_toEndOf="@+id/news_image"
            app:layout_constraintStart_toStartOf="@id/newsTitle"
            app:layout_constraintTop_toBottomOf="@id/newsTitle"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>