<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:foregroundGravity="center"
        android:padding="10dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="8dp"
        android:layout_height="100dp"
        tools:ignore="MissingConstraints"
        android:background="@drawable/card_rounded">

        <ImageView
            android:id="@+id/profile_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:civ_border_width="0.5dp"
            android:contentDescription="@string/history"
            android:src="@drawable/analytics"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.150"
            app:layout_constraintVertical_bias="0.500"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintEnd_toStartOf="@+id/imageView">

            <TextView
                android:id="@+id/textViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginEnd="36dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/label"/>

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginEnd="36dp"
                android:textSize="16sp"
                android:text="@string/label"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow_right"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>